test/bad/multisym-method.fnl
(fn abc []
  (print xyz:abc))
